// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldRadio 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
}

.c4 input[type='radio']:checked + .c5 {
  background: #6C43E0;
  border-color: #6C43E0;
}

.c4 input[type='radio']:checked + .c5::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c4 input[type='radio']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='radio']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        className=""
        id="FieldRadioID"
        name="thumbsUp"
        type="radio"
      />
      <div
        className="c5 c6"
      />
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;

exports[`A FieldRadio checked 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
}

.c4 input[type='radio']:checked + .c5 {
  background: #6C43E0;
  border-color: #6C43E0;
}

.c4 input[type='radio']:checked + .c5::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c4 input[type='radio']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='radio']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        checked={true}
        className=""
        id="FieldRadioID"
        name="thumbsUp"
        type="radio"
      />
      <div
        className="c5 c6"
      />
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;
